--- a/.azure-pipelines/templates/osx/build-and-unit-test.yml
+++ b/.azure-pipelines/templates/osx/build-and-unit-test.yml
@@ -9,6 +9,15 @@ steps:
     displayName: Delete previous build outputs
     continueOnError: true
 
+  - script: |
+      GIT_VERSION=$(grep '<GitPackageVersion>' Directory.Build.props | grep -Eo '[0-9.]+(-\w+)*')
+      mkdir ../out
+      cd ../out
+      dotnet new classlib -n Scalar.GitInstaller
+      cd Scalar.GitInstaller
+      dotnet add Scalar.GitInstaller.csproj package "GitForMac.GVFS.Installer" --package-directory . --version "$GIT_VERSION" --source "https://pkgs.dev.azure.com/gvfs/ci/_packaging/Dependencies/nuget/v3/index.json"
+    displayName: Setup Git installer
+
   - script: Scripts/Mac/BuildScalarForMac.sh $(configuration) $(majorAndMinorVersion).$(revision)
     displayName: Build Scalar ($(configuration))
 
