macOS: find the macOS Git installer
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/Scalar.Installer.Mac/Scalar.Installer.Mac.csproj
+++ b/Scalar.Installer.Mac/Scalar.Installer.Mac.csproj
@@ -35,6 +35,7 @@
     <ItemGroup>
       <ScriptTemplate Include="$(MSBuildThisFileDirectory)InstallScalar.template.sh" />
       <ScalarPackage  Include="$(PackageOutputPath)*.pkg" />
+      <GitPackage    Include="..\..\out\Scalar.GitInstaller\gitformac.gvfs.installer\2*\tools\*.pkg" LinkBase="Git" />
     </ItemGroup>
 
     <!-- Build the distribution script -->
