--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-16.04, ubuntu-18.04, ubuntu-20.04, windows-2019, macos-10.15]
-        features: [false, experimental]
+        features: [ignored]
 
     env:
       BUILD_FRAGMENT: bin/Release/netcoreapp3.1
